refs #371: Added the whole contributions guidelines section (PR #372)
* refs #371: WIP on the contribution basics page.
* Apply suggestions from code review
* @mapedorr fixed some typos and mistakes.
Co-authored-by: Carenalga <mapedorr@gmail.com>
* refs #371: added support for definition lists to markdown.
* refs #371: WIP on the Q&A section.
* refs #371: Reordered the Q&A section by impotance and to follow a logical flow.
* Typo fixing
* refs #371: Added folder structure to the conventions page.
* refs #371: Support for good/bad code examples has been added to mkdocs and the theme.
* refs #371: Added sections for code styling and comments.
* refs #371: The conventions page is now complete.
* refs #371: Draft for toolchain page.
* refs #371: Final version of the toolchain page.
* refs #371: Removed redundant information from the docs README file. They are in the docs now.
* refs #371: Added info on how to contact maintainers about contributions.
* refs #371: Added a part of the PM page to the contribution section.
* refs #371: Added some info about proper naming to the Conventions section.
* refs #371: Sorted the articles in a more natural way, clarified multiple points, completed the project management section.
* refs #371: Documentation contribution section is done. Also fixed a missing whitespace.
* refs #371: WIP on the project overview page.
* refs #371: Some additions to custom CSS to render quote blocks and mermaid charts better.
* refs #371: More precise markdown specs and styleguides.
* refs #371: Engine overview completed.
* refs #371: Added some CS archeology artifact.
* refs #371: fixed title caps.
* refs #371: Broken down longer sections into chapters for easier access and readability.
* refs #371: Added separators to long first page.
* refs #371: fixed wrong links to github profiles.
* refs #371: Fixed typo mentioned by @carenalga.
* refs #371: Addressed feedback from @mapedorr.
* Applying suggestions from @mapedorr code 

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -29,7 +29,9 @@ markdown_extensions:
   - admonition
   - attr_list
   - fontawesome_in_markdown
+  - def_list
 plugins:
   - search
   - mkdocs-nav-weight
-  - mermaid2
+  - mermaid2:
+      version: 11.4.1
