refs #383: Introduced a redirect map to preserve external links.

--- a/docs/Dockerfile.MkDocs
+++ b/docs/Dockerfile.MkDocs
@@ -1,3 +1,3 @@
 FROM minidocks/mkdocs:latest
 
-RUN pip install mkdocs-nav-weight mkdocs-mermaid2-plugin fontawesome-in-markdown
+RUN pip install mkdocs-nav-weight mkdocs-mermaid2-plugin fontawesome-in-markdown mkdocs-redirects
