--- a/addons/popochiu/editor/gizmos/plugin.cfg
+++ b/addons/popochiu/editor/gizmos/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="PopochiuGizmoClickable"
+name="PopochiuGizmo"
 description="Provides viewport-drawn interactive 2D gizmos to Popochiu objects in the editor."
 author="Carenalgas Dev Team"
 version="2.0"
-script="gizmo_clickable_plugin.gd"
+script="gizmo_plugin.gd"
